syntax = "proto3";

option csharp_namespace = "CenterEnd.Protos";

package place_recommender;

// The greeting service definition.
service PlaceRecommender {
  // Sends a greeting
  rpc Recommend (RecommendPlacesRequest) returns (RecommendPlacesResponse);
}

// The request message containing the user's name.
message RecommendPlacesRequest {
  int32 user_id = 1;
  PlaceRecommenderConfiguration configuration = 2;
}

// The response message containing the greetings.
message RecommendPlacesResponse {
  repeated int32 place_ids = 1;
}

// The Configuration message definition.
message PlaceRecommenderConfiguration {
  repeated string categories = 1;
  string originYX = 2;
  float radius = 3;
  repeated string keywords = 4;
  string price_range = 5;
}
